--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,6 +7,7 @@
 
     <!-- Angular (angularjs.org) -->
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-route.min.js"></script>
 
     <!-- AngularUI (angularui.org) -->
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.js"></script>
@@ -22,20 +23,7 @@
   	<script type="text/javascript" src="/js/controllers.js"></script>
   	<script type="text/javascript" src="/js/services.js"></script>
 </head>
-<body ng-app="schpeyeder-web" ng-controller="driversController">
-  <table>
-    <thead>
-      <tr><th colspan="3">Drivers Championship Standings</th></tr>
-    </thead>
-    <tbody>
-      <tr ng-repeat="driver in driversList">
-        <td>         
-          {{driver.Driver.givenName}}&nbsp;{{driver.Driver.familyName}}
-        </td>
-        <td>{{driver.Constructors[0].name}}</td>
-        <td>{{driver.points}}</td>
-      </tr>
-    </tbody>
-  </table>
+<body ng-app="schpeyeder-web">
+	<ng-view></ng-view>
 </body>
 </html>
