--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="schpeyeder-web">
 <head>
   	<title>Schpeyeder Web</title>  	
     <!-- JQuery (jquery.com) -->
@@ -7,23 +7,26 @@
 
     <!-- Angular (angularjs.org) -->
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-route.min.js"></script>
 
     <!-- AngularUI (angularui.org) -->
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.js"></script>
                               	    
+	<!-- Boostrap -->
+	<script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>                              	    
+                 
   	<!-- Style Sheets -->
   	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap-theme.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/ng-grid/2.0.7/ng-grid.css">
     
-    <!-- Local JS Files -->
+    <!-- Local JS Files for Angular Wireup -->
   	<script type="text/javascript" src="/js/app.js"></script>
   	<script type="text/javascript" src="/js/controllers.js"></script>
   	<script type="text/javascript" src="/js/services.js"></script>
 </head>
-<body ng-app="schpeyeder-web">
-	<ng-view></ng-view>
+<body>
+<div ui-view="menu"></div>
+<div ui-view="content"></div>
 </body>
 </html>
