Wireup for Grid layout in Movies.  Corrected bug with search in movies.  Refactored function names and filter names in controllers.

--- a/src/partials/navigation/menu-inverse.html
+++ b/src/partials/navigation/menu-inverse.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	 <div class="container-fluid">
 	   <!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
@@ -12,8 +12,8 @@
 		</div>
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
-			  <li class="active"><a href="#" ui-sref="drivers">Home</a></li>
-			  <li><a href="#" ui-sref="movies">Far Away</a></li>
+			  <li><a href="#" ui-sref="drivers">Home</a></li>
+			  <li class="active"><a href="#" ui-sref="movies">Far Away</a></li>
 			  <li class="dropdown">
 			    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Neverland <b class="caret"></b></a>
 			    <ul class="dropdown-menu">
