--- a/src/partials/drivers.list.html
+++ b/src/partials/drivers.list.html
@@ -1,5 +1,9 @@
-<div class="col-md-3">
-	<input type="text" class="form-control" ng-model="nameFilter" placeholder="Search..."/>
+<div class="container">
+	<div class="row">
+		<div class="col-lg-offset-1 col-sm-3 col-md-3 col-lg-4">
+			<input type="text" class="form-control" ng-model="query" placeholder="Search..."/>
+		</div>
+	</div>
 </div>
 <table class="table table-striped table-hover">
 <thead>
@@ -7,15 +11,19 @@
   	<th colspan="4">Drivers Championship Standings</th></tr>
 </thead>
 <tbody>
-  <tr ng-repeat="driver in driversList | filter: searchFilter">
-    <td>{{$index + 1}}</td>
-    <td>
-      <a href="#/drivers/{{driver.Driver.driverId}}">
-	  	{{driver.Driver.givenName}}&nbsp;{{driver.Driver.familyName}}
-	  </a>
-	</td>
-    <td>{{driver.Constructors[0].name}}</td>
-    <td>{{driver.points}}</td>
-  </tr>
+	<!-- setup the repeater:
+		- foreach item in driversList, create a row
+		- set the filter method on the controller for searching
+	  -->
+	<tr ng-repeat="driver in driversList | filter: search">
+    	<td>{{$index + 1}}</td>
+    	<td>
+      		<a href="#/drivers/{{driver.Driver.driverId}}">
+	  		{{driver.Driver.givenName}}&nbsp;{{driver.Driver.familyName}}
+	  		</a>
+		</td>
+    	<td>{{driver.Constructors[0].name}}</td>
+    	<td>{{driver.points}}</td>
+  	</tr>
 </tbody>
 </table>
