--- a/src/partials/movies.list.html
+++ b/src/partials/movies.list.html
@@ -1,25 +1,38 @@
-<div class="col-md-3">
-	<input type="text" class="form-control" ng-model="nameFilter" placeholder="Search..."/>
+<div class="container">
+	<div class="row">
+		<div class="col-lg-offset-1 col-sm-3 col-md-3 col-lg-4">
+			<input type="text" class="form-control" ng-model="query" placeholder="Search..."/>
+		</div>
+	</div>
 </div>
-<table class="table table-striped table-hover">
-<thead>
-  <tr>
-  	<th colspan="6">Upcomming Movies</th></tr>
-</thead>
-<tbody>
-  <tr ng-repeat="movie in moviesList | filter: searchFilter">
-    <td>{{$index + 1}}</td>
-    <td>
-    <img src="{{movie.posters.thumbnail}}" alt="{{movie.title}}" />
-	</td>
-    <td>
-      <a href="#/movies/{{movie.id}}">
-	  	{{movie.title}}
-	  </a>
-	</td>
-    <td>{{movie.year}}</td>
-    <td>{{movie.mpaa_rating}}</td>
-    <td>{{movie.runtime}}</td>
-  </tr>
-</tbody>
-</table>
+<div class="container-fluid">
+	<div ng-repeat="movie in moviesList | filter: search" class="row adj-padding-top">
+		<div class="col-sm-12 col-md-12 col-lg-12">
+			<div class="col-sm-2 col-md-2 col-lg-2">
+				<img src="{{movie.posters.thumbnail}}" alt="{{movie.title}}" />	
+			</div>
+			<div class="col-sm-10 col-md-10 col-lg-10">
+				<div class="row">
+					<div class="col-sm-12 col-md-12 col-lg-12">
+						<a href="#/movies/{{movie.id}}">
+	  						{{movie.title}}
+	  					</a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-2 col-md-2 col-lg-2">
+						{{movie.mpaa_rating}}
+					</div>
+					<div class="col-sm-2 col-md-2 col-lg-2">
+						{{movie.runtime}}
+					</div>
+				</div>				
+				<div class="row">
+					<div class="col-sm-12 col-md-12 col-lg-12">
+						<p class="text-small">{{movie.synopsis}}</p>
+					</div>					
+				</div>
+	  		</div>			
+		</div>
+	</div>
+</div>
