--- a/src/partials/movies.list.html
+++ b/src/partials/movies.list.html
@@ -8,10 +8,10 @@
 <div class="container-fluid">
 	<div ng-repeat="movie in moviesList | filter: search" class="row adj-padding-top">
 		<div class="col-sm-12 col-md-12 col-lg-12">
-			<div class="col-sm-2 col-md-2 col-lg-2">
+			<div class="col-sm-1 col-md-1 col-lg-1">
 				<img src="{{movie.posters.thumbnail}}" alt="{{movie.title}}" />	
 			</div>
-			<div class="col-sm-10 col-md-10 col-lg-10">
+			<div class="col-sm-11 col-md-11 col-lg-11">
 				<div class="row">
 					<div class="col-sm-12 col-md-12 col-lg-12">
 						<a href="#/movies/{{movie.id}}">
@@ -20,18 +20,20 @@
 					</div>
 				</div>
 				<div class="row">
+					<div class="col-sm-12 col-md-12 col-lg-12">
+						<p class="small">{{movie.synopsis}}</p>
+					</div>					
+				</div>
+				<div class="row">
 					<div class="col-sm-2 col-md-2 col-lg-2">
 						{{movie.mpaa_rating}}
 					</div>
 					<div class="col-sm-2 col-md-2 col-lg-2">
 						{{movie.runtime}}
+						<span class="small"> min</span>
 					</div>
 				</div>				
-				<div class="row">
-					<div class="col-sm-12 col-md-12 col-lg-12">
-						<p class="text-small">{{movie.synopsis}}</p>
-					</div>					
-				</div>
+
 	  		</div>			
 		</div>
 	</div>
