Added directives for a custom control with binding.

--- a/src/partials/movies.list.html
+++ b/src/partials/movies.list.html
@@ -32,8 +32,10 @@
 						{{movie.runtime}}
 						<span class="small"> min</span>
 					</div>
-				</div>				
-
+					<div class="col-sm-4 col-md-4 col-lg-4">
+						<div rating rating-value="rating" max="10" on-rating-selected="saveRating(newRating)"></div>
+					</div>
+				</div>								
 	  		</div>			
 		</div>
 	</div>
