--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -24,6 +24,7 @@
   	<script type="text/javascript" src="/js/app.js"></script>
   	<script type="text/javascript" src="/js/controllers.js"></script>
   	<script type="text/javascript" src="/js/services.js"></script>
+  	<script type="text/javascript" src="/js/directives.js"></script>
   	
   	<!-- Local CSS files -->
   	<link rel="stylesheet" href="/css/app.css" />
