Still debugging Closure implementation. :-(

--- a/src/partials/drivers.list.html
+++ b/src/partials/drivers.list.html
@@ -5,7 +5,7 @@
 		</div>
 	</div>
 </div>
-<!-- <table class="table table-striped table-hover">
+<table class="table table-striped table-hover">
 <thead>
   <tr>
   	<th colspan="4">Drivers Championship Standings</th></tr>
@@ -26,5 +26,7 @@
     	<td>{{driver.points}}</td>
   	</tr>
 </tbody>
-</table> -->
+</table>
+<!--  
 <grid grid-data="driversList" grid-columns="columns"></grid>
+-->
