--- a/src/partials/movies.list.html
+++ b/src/partials/movies.list.html
@@ -33,7 +33,7 @@
 						<span class="small"> min</span>
 					</div>
 					<div class="col-sm-4 col-md-4 col-lg-4">
-						<rating rating-value="rating" max="10" on-rating-selected="saveRating(newRating)"></rating>
+						<!-- <rating rating-value="rating" max="10" on-rating-selected="saveRating(newRating)"></rating> -->
 					</div>
 				</div>								
 	  		</div>			
