Moving files for Closure.  Corrected hg-app declaration in index.html (needed to by the closure namespace:  schpeyeder.web)

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="schpeyeder-web">
+<html ng-app="schpeyeder.web">
 <head>
   	<title>Schpeyeder Web</title>
   	<!-- Force max version on IE -->
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.js"></script>
 
     <!-- Angular (angularjs.org) -->
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.js"></script>
 
     <!-- AngularUI (angularui.org) -->
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.js"></script>
