--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/ng-grid/2.0.7/ng-grid.css">
     
     <!-- Compiled JS (with Closure) -->
-  	<script type="text/javascript" src="/js/compiled.js"></script>
+  	<script type="text/javascript" src="/scripts/compiled.js"></script>
   	
   	<!-- Local CSS files -->
   	<link rel="stylesheet" href="/css/app.css" />
