Continued exploration of directives.  Have grid directive dynamically building tables, added new editable directive that flips text to inputs.

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -35,3 +35,10 @@ ul.rating {
 .rating .filled {
   color: #21568b;
 }
+
+/* Grid */
+.grid-container
+{
+	max-height: 750px;
+	overflow-y:scroll;
+}
