--- a/src/app/components/driver/list/driver.html
+++ b/src/app/components/driver/list/driver.html
@@ -5,7 +5,10 @@
 		</div>
 	</div>
 </div>
-<!-- <table class="table table-striped table-hover">
+<grid grid-data="driversList" grid-columns="columns"></grid>
+
+<!-- 
+<table class="table table-striped table-hover">
 <thead>
   <tr>
   	<th colspan="4">Drivers Championship Standings</th></tr>
@@ -22,6 +25,7 @@
     	<td>{{driver.points}}</td>
   	</tr>
 </tbody>
-</table> -->
-<grid grid-data="driversList" grid-columns="columns"></grid>
+</table> 
+-->
+
 
