--- a/src/app/components/driver/list/driver.html
+++ b/src/app/components/driver/list/driver.html
@@ -5,27 +5,7 @@
 		</div>
 	</div>
 </div>
-<grid grid-data="driversList" grid-columns="columns"></grid>
+<grid grid-data="driversList | filter: search" grid-columns="columns"></grid>
 
-<!-- 
-<table class="table table-striped table-hover">
-<thead>
-  <tr>
-  	<th colspan="4">Drivers Championship Standings</th></tr>
-</thead>
-<tbody>	 
-	<tr ng-repeat="driver in driversList | filter: search">
-    	<td>{{$index + 1}}</td>
-    	<td>
-      		<a href="#/drivers/{{driver.Driver.driverId}}">
-	  		{{driver.Driver.givenName}}&nbsp;{{driver.Driver.familyName}}
-	  		</a>
-		</td>
-    	<td>{{driver.Constructors[0].name}}</td>
-    	<td>{{driver.points}}</td>
-  	</tr>
-</tbody>
-</table> 
--->
 
 
